--- a/templates/index.html
+++ b/templates/index.html
@@ -4,21 +4,109 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+
+<link href="https://unpkg.com/tabulator-tables/dist/css/tabulator.min.css" rel="stylesheet">
+<script type="text/javascript" src="https://unpkg.com/tabulator-tables/dist/js/tabulator.min.js"></script>
+
+
+<script type = "text/javascript" 
+         src = "{{ url_for('static', filename = 'js/jput.min.js') }}" ></script>
+   
+
+<script>
+   $(document).ready(function(){
+        var tabledata;
+
+        $(document).on("click", "#srcbtn", function(){
+        
+        var send_data ={
+          
+         src:  $("#src").val()
+        
+       }
+       
+        $.ajax({
+        type: "POST",
+        url: "/search",
+        dataType: "json",
+         processData: false,
+         contentType: "application/json",
+        
+        success: function (data) {
+          
+            console.log("success");
+             alert(JSON.stringify(data));	
+             var tabledatastr=JSON.stringify(data);
+            tabledata=tabledatastr.toString().replace(/"(\w+)"\s*:/g, '$1:');
+              alert(tabledatastr.toString().replace(/"(\w+)"\s*:/g, '$1:'));
+            //  $("#example-table").load(location.href + " #example-table");
+
+
+
+         
+        var table = new Tabulator("#example-table", {
+    height:"311px",
+    data: JSON.parse(tabledata),
+    columns:[
+    {title:"Author", field:"author", width:250, }, //frozen column
+    {title:"Content", field:"content", width:400},
+    //{title:"Image", field:"urlToImage", width:450},
+    
+    ],
+});
+
+
+          },
+        
+          data: JSON.stringify(send_data),
+         
+        });
+
+    
+    });
+
+
+    
+
+
+
+
+  });
+
+
+  
+</script>
+
     <title>Document</title>
 </head>
+
 <body>
-    <div class="container">
- 
-        {% for new, des, i in context %}
-     
-        <img src="{{i}}" alt="" height="300px" width="300px">
-        <h3>News: </h3> {{new}}
-        <h4>Description: </h4> {{des}}
-     
-        {% endfor %}
-     
-     
+    
+    <div class="form-group">
+        <label>Search:</label>
+       
+        <input id="src" type="text" class="form-control" name="src"  ></input>
+        
     </div>
-     
+    <div class="form-group">
+ 
+ 
+        <button type="button" id="srcbtn" class="btn btn-success"   type="submit" data-dismiss="modal">Search</button>
+
+
+     </div>
+
+
+     <div id="example-table"></div>
+       
+  
 </body>
 </html>
