--- a/templates/tabulator.html
+++ b/templates/tabulator.html
@@ -20,8 +20,8 @@
 
 
 var tabledata = [
-    {id:1, name:"Oli Bob", progress:12, location:"United Kingdom", gender:"male", rating:1, col:"red", dob:"14/04/1984", car:1, lucky_no:5, lorem:"Lorem ipsum dolor sit amet, elit consectetur adipisicing "},
-    {id:2, name:"Mary May", progress:50, location:"Germany", gender:"female", rating:2, col:"blue", dob:"14/05/1982", car:true, lucky_no:10, lorem:"Lorem ipsum dolor sit amet, elit consectetur adipisicing "},
+    { name:"Oli Bob", progress:12, location:"United Kingdom", gender:"male", rating:1, col:"red", dob:"14/04/1984", car:1, lucky_no:5, lorem:"Lorem ipsum dolor sit amet, elit consectetur adipisicing "},
+    { name:"Mary May", progress:50, location:"Germany", gender:"female", rating:2, col:"blue", dob:"14/05/1982", car:true, lucky_no:10, lorem:"Lorem ipsum dolor sit amet, elit consectetur adipisicing "},
     {id:3, name:"Christine Lobowski", progress:42, location:"France", gender:"female", rating:0, col:"green", dob:"22/05/1982", car:"true", lucky_no:12, lorem:"Lorem ipsum dolor sit amet, elit consectetur adipisicing "},
     {id:4, name:"Brendon Philips", progress:100, location:"USA", gender:"male", rating:1, col:"orange", dob:"01/08/1980", lucky_no:18, lorem:"Lorem ipsum dolor sit amet, elit consectetur adipisicing "},
     {id:5, name:"Margret Marmajuke", progress:16, location:"Canada", gender:"female", rating:5, col:"yellow", dob:"31/01/1999", lucky_no:33, lorem:"Lorem ipsum dolor sit amet, elit consectetur adipisicing "},
@@ -35,6 +35,8 @@ var tabledata = [
 
     var table = new Tabulator("#example-table", {
     height:"311px",
+    layout:"fitColumns",
+    resizableColumns:false,
     data:tabledata,
     columns:[
     {title:"Name", field:"name", width:250, frozen:true}, //frozen column
