--- a/templates/tabulator.html
+++ b/templates/tabulator.html
@@ -12,7 +12,35 @@
     
     <link href="https://unpkg.com/tabulator-tables/dist/css/tabulator.min.css" rel="stylesheet">
     <script type="text/javascript" src="https://unpkg.com/tabulator-tables/dist/js/tabulator.min.js"></script>
-   
+    <style type="text/css">
+        
+        /*Style row formatter contents*/
+#example-table .tabulator-row table{
+    vertical-align: middle;
+    border-collapse:collapse;
+}
+
+#example-table .tabulator-row table img{
+    border:2px solid #ccc;
+}
+
+#example-table .tabulator-row table tr td{
+     border:none;
+}
+
+#example-table .tabulator-row table tr td:first-of-type{
+    width:60px;
+}
+
+#example-table .tabulator-row table tr td div{
+    padding:5px;
+}
+        
+        
+        
+        
+        
+        </style>
 
     <script>
         $(document).ready(function(){
@@ -47,6 +75,12 @@ var tabledata = [
     {title:"Driver", field:"car", align:"center", formatter:"tickCross", width:150},
     ],
 });
+
+
+
+
+
+
 
 
 
